changedection/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: changedetection
  name: changedetection
spec:
  selector:
    app: changedetection
  ports:
  - name: changedetection
    protocol: TCP
    port: 5000
